hphp/test/zend/good/zend/exception_004.php.exp
HipHop Fatal error: Exceptions must be valid objects derived from the Exception base class in hphp/test/zend/good/zend/exception_004.php on line 8
